--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>whichdash org</title>
-        <meta name="description" content="">
+        <meta name="description" content="When are you supposed to use a dash instead of a hyphen? What's the difference between an em dash and an en dash? ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="shortcut icon" href="/favicon.ico">
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
         <link rel="author" href="humans.txt" />
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css(.) styles/vendor.css -->
         <!-- bower:css -->
@@ -27,6 +26,158 @@
         <!--[if lt IE 10]>
           <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <header>
+            <nav class="sitenav-text">
+                <a href="#emdash">Em Dash</a>
+                <a href="#endash">En Dash</a>
+                <a href="#hyphen">Hyphen</a>
+            </nav>
+
+            <nav class="sitenav-graphic">
+                <div class="logo-whichdash">
+                    <a href="#emdash" class="logo-emdash" title="Em Dash"></a>
+                    <a href="#endash" class="logo-endash" title="En Dash"></a>
+                    <a href="#hyphen" class="logo-hyphen" title="Hyphen"></a>
+                </div>
+            </nav>
+        </header>
+
+        <main>
+            <section class="introduction">
+                <p><strong>Which Dash</strong> is a super<em class="hyphen">-</em>simple resource to better understand the difference between a few commonly used dashes. We hope this guide pushes your "grammar" gas pedal from 0<em class="endash">&ndash;</em>60 and allows you to educate yourself and others<em class="emdash">&mdash;</em>providing us the privilege of earning a place on your booksmark bar. <em class="emdash">&mdash;</em>Will &amp; Aaron</p>
+            </section>
+
+            <section class="definitions">
+
+                <article id="emdash">
+                    <h1>Em Dash <span class="emdash">&mdash;</span></h1>
+                    <p>Interrupts a sentence when an additional thought is needed, commonly replacing the need for parenthesis.</p>
+
+                    <h2>Examples</h2>
+                    <ol>
+                        <li>He forgot his deodorant<span class="emdash">&mdash;</span>a situation that resulted in a series of unfortunate events.</li>
+                        <li>"May I borrow your stick of deodorant?" <span class="emdash">&mdash;</span>Anonymous</li>
+                    </ol>
+
+                    <h2>Apply it</h2>
+                    <dl>
+                        <dt>Copy the character</dt>
+                        <dd class="copy-it"><button class="button" id="copy-mdash" data-clipboard-text="&mdash;"><span class="dash">&mdash;</span></button></dd>
+
+                        <dt>Mac Keyboard</dt>
+                        <dd>
+                            <span class="key" title="Option">option</span>
+                                <span class="key-combiner">+</span>
+                            <span class="key" title="Shift">shift</span>
+                                <span class="key-combiner">+</span>
+                            <span class="key" title="Hyphen">-</span>
+                        </dd>
+
+                        <dt>Windows Keyboard</dt>
+                        <dd>
+                            <span class="key" title="Alt">alt</span>
+                                <span class="key-combiner">+</span>
+                            <span class="key" title="0">0</span>
+                                <span class="key-combiner">+</span>
+                            <span class="key" title="1">1</span>
+                                <span class="key-combiner">+</span>
+                            <span class="key" title="5">5</span>
+                                <span class="key-combiner">+</span>
+                            <span class="key" title="1">1</span>
+                        </dd>
+
+                        <dt>html code</dt>
+                        <dd><code>&amp;mdash;</code></dd>
+                    </dl>
+                </article>
+
+                <article id="endash">
+                    <h1>En Dash <span class="endash">&ndash;</span></h1>
+                    <p>Connects two items designated by range or duration.</p>
+
+                    <h2>Examples</h2>
+                    <ol>
+                        <li>The borrowed deodorant was in use October 6<span class="endash">&ndash;</span>10, 2012.</li>
+                        <li>He requested the deodorant sometime between 7<span class="endash">&ndash;</span>9am.</li>
+                        <li>The team avoided a stinky situation from Cincinnati<span class="endash">&ndash;</span>Cleveland.</li>
+                    </ol>
+
+                    <h2>Apply it</h2>
+                    <dl>
+                        <dt>Copy the character</dt>
+                        <dd class="copy-it"><button class="button" id="copy-ndash" data-clipboard-text="&ndash;">&ndash;</button></dd>
+
+                        <dt>Mac Keyboard</dt>
+                        <dd>
+                            <span class="key" title="Option">option</span>
+                                <span class="key-combiner">+</span>
+                            <span class="key" title="Hyphen">-</span>
+                        </dd>
+
+                        <dt>Windows Keyboard</dt>
+                        <dd>
+                            <span class="key" title="Alt">alt</span>
+                                <span class="key-combiner">+</span>
+                            <span class="key" title="0">0</span>
+                                <span class="key-combiner">+</span>
+                            <span class="key" title="1">1</span>
+                                <span class="key-combiner">+</span>
+                            <span class="key" title="5">5</span>
+                                <span class="key-combiner">+</span>
+                            <span class="key" title="0">0</span>
+                        </dd>
+
+                        <dt>html code</dt>
+                        <dd><code>&amp;ndash;</code></dd>
+                    </dl>
+                </article>
+
+                <article id="hyphen">
+                    <h1>Hyphen <span class="hyphen">-</span></h1>
+                    <p>Brings two items together that are closely related and turns them into a single idea.</p>
+
+                    <h2>Examples</h2>
+                    <ol>
+                        <li>The deodorant was freshly<span class="hyphen">-</span>applied.</li>
+                        <li>Its odor<span class="hyphen">-</span>reduction capabilities were astounding.</li>
+                        <li>The deodorant no more than two years old at that time. A three<span class="hyphen">-</span>year<span class="hyphen">-</span>old stick of deodorant would have been disgusting.</li>
+                    </ol>
+
+                    <h2>Apply it</h2>
+                    <dl>
+                        <dt>Copy the character</dt>
+                        <dd class="copy-it"><button class="button" id="copy-hyphen" data-clipboard-text="-">-</button></dd>
+
+                        <dt>Mac Keyboard</dt>
+                        <dd><span class="key" title="Hyphen">-</span></dd>
+
+                        <dt>Windows Keyboard</dt>
+                        <dd><span class="key" title="Hyphen">-</span></dd>
+
+                        <dt>html code</dt>
+                        <dd>n/a</dd>
+                    </dl>
+                </article>
+
+            </section>
+
+            <section class="resources">
+                <h2>Resources</h2>
+                <ol>
+                    <li><a target="_blank" href="http://www.chicagomanualofstyle.org/">Chicago Manual of Style</a></li>
+                    <li><a target="_blank" href="http://grammarist.com/">Grammarist</a></li>
+                    <li><a target="_blank" href="http://www.fonts.com/">Fonts.com</a></li>
+                    <li><a target="_blank" href="http://www.dummies.com/">Dummies.com</a></li>
+                    <li><a target="_blank" href="https://www.typewolf.com/">Typewolf</a></li>
+                </ol>
+            </section>
+
+        </main>
+
+        <footer>
+            Created with the best intent by <br /><a href="https://twitter.com/willdages">Will Dages</a> | <a href="https://twitter.com/kaufmandesign">Aaron Kaufman</a>
+        </footer>
 
         <!-- build:js(.) scripts/vendor.js -->
         <!-- bower:js -->
