A big batch of styling and functionality

--- a/app/index.html
+++ b/app/index.html
@@ -47,119 +47,133 @@
 
         <main class="content">
             <section class="introduction">
-                <p><strong>Which Dash</strong> is a super<em class="hyphen">-</em>simple resource to better understand the difference between a few commonly used dashes. We hope this guide pushes your "grammar" gas pedal from 0<em class="endash">&ndash;</em>60 and allows you to educate yourself and others<em class="emdash">&mdash;</em>providing us the privilege of earning a place on your booksmark bar. <em class="emdash">&mdash;</em>Will &amp; Aaron</p>
+                <p><strong>Which Dash</strong> is a super<em class="hyphen">-</em>simple resource to help you better understand the difference between a few commonly used dashes. We hope this guide pushes your "grammar" gas pedal from 0<em class="endash">&ndash;</em>60 and allows you to educate yourself and others<em class="emdash">&mdash;</em>providing us the privilege of earning a place on your booksmark bar. <em class="emdash">&mdash;</em>Will &amp; Aaron</p>
             </section>
 
             <section class="definitions">
 
                 <article id="emdash">
-                    <h1>Em Dash <span class="emdash">&mdash;</span></h1>
-                    <p>Interrupts a sentence when an additional thought is needed, commonly replacing the need for parenthesis.</p>
+                    <div class="overview">
+                        <h1>Em Dash <span class="emdash">&mdash;</span></h1>
+                        <p>Interrupts a sentence when an additional thought is needed, commonly replacing the need for parenthesis.</p>
+                    </div>
+                    <div class="details">
+                        <h2>Examples</h2>
+                        <ol>
+                            <li>He forgot his deodorant<span class="emdash">&mdash;</span>a situation that resulted in a series of unfortunate events.</li>
+                            <li>"May I borrow your stick of deodorant?" <span class="emdash">&mdash;</span>Anonymous</li>
+                        </ol>
 
-                    <h2>Examples</h2>
-                    <ol>
-                        <li>He forgot his deodorant<span class="emdash">&mdash;</span>a situation that resulted in a series of unfortunate events.</li>
-                        <li>"May I borrow your stick of deodorant?" <span class="emdash">&mdash;</span>Anonymous</li>
-                    </ol>
+                        <h2>Apply it</h2>
+                        <dl>
+                            <dt>Copy the character</dt>
+                            <dd class="copy-it"><button class="button-copy" id="copy-mdash" data-clipboard-text="&mdash;"><span class="dash">&mdash;</span></button><span class="copied">&#10004;</span></dd>
 
-                    <h2>Apply it</h2>
-                    <dl>
-                        <dt>Copy the character</dt>
-                        <dd class="copy-it"><button class="button" id="copy-mdash" data-clipboard-text="&mdash;"><span class="dash">&mdash;</span></button></dd>
+                            <dt>Mac Keyboard</dt>
+                            <dd>
+                                <span class="key" title="Option">option</span>
+                                    <span class="key-combiner">+</span>
+                                <span class="key" title="Shift">shift</span>
+                                    <span class="key-combiner">+</span>
+                                <span class="key" title="Hyphen">-</span>
+                            </dd>
 
-                        <dt>Mac Keyboard</dt>
-                        <dd>
-                            <span class="key" title="Option">option</span>
-                                <span class="key-combiner">+</span>
-                            <span class="key" title="Shift">shift</span>
-                                <span class="key-combiner">+</span>
-                            <span class="key" title="Hyphen">-</span>
-                        </dd>
+                            <dt>Windows Keyboard</dt>
+                            <dd>
+                                <span class="key" title="Alt">alt</span>
+                                    <span class="key-combiner">+</span>
+                                <span class="key" title="0">0</span>
+                                    <span class="key-combiner">+</span>
+                                <span class="key" title="1">1</span>
+                                    <span class="key-combiner">+</span>
+                                <span class="key" title="5">5</span>
+                                    <span class="key-combiner">+</span>
+                                <span class="key" title="1">1</span>
+                            </dd>
 
-                        <dt>Windows Keyboard</dt>
-                        <dd>
-                            <span class="key" title="Alt">alt</span>
-                                <span class="key-combiner">+</span>
-                            <span class="key" title="0">0</span>
-                                <span class="key-combiner">+</span>
-                            <span class="key" title="1">1</span>
-                                <span class="key-combiner">+</span>
-                            <span class="key" title="5">5</span>
-                                <span class="key-combiner">+</span>
-                            <span class="key" title="1">1</span>
-                        </dd>
-
-                        <dt>html code</dt>
-                        <dd><code>&amp;mdash;</code></dd>
-                    </dl>
+                            <dt>html code</dt>
+                            <dd><code>&amp;mdash;</code></dd>
+                        </dl>
+                    </div>
                 </article>
 
                 <article id="endash">
-                    <h1>En Dash <span class="endash">&ndash;</span></h1>
-                    <p>Connects two items designated by range or duration.</p>
 
-                    <h2>Examples</h2>
-                    <ol>
-                        <li>The borrowed deodorant was in use October 6<span class="endash">&ndash;</span>10, 2012.</li>
-                        <li>He requested the deodorant sometime between 7<span class="endash">&ndash;</span>9am.</li>
-                        <li>The team avoided a stinky situation from Cincinnati<span class="endash">&ndash;</span>Cleveland.</li>
-                    </ol>
+                    <div class="overview">
+                        <h1>En Dash <span class="endash">&ndash;</span></h1>
+                        <p>Connects two items designated by range or duration.</p>
+                    </div>
 
-                    <h2>Apply it</h2>
-                    <dl>
-                        <dt>Copy the character</dt>
-                        <dd class="copy-it"><button class="button" id="copy-ndash" data-clipboard-text="&ndash;">&ndash;</button></dd>
+                    <div class="details">
+                        <h2>Examples</h2>
+                        <ol>
+                            <li>The borrowed deodorant was in use October 6<span class="endash">&ndash;</span>10, 2012.</li>
+                            <li>He requested the deodorant sometime between 7<span class="endash">&ndash;</span>9am.</li>
+                            <li>The team avoided a stinky situation from Cincinnati<span class="endash">&ndash;</span>Cleveland.</li>
+                        </ol>
 
-                        <dt>Mac Keyboard</dt>
-                        <dd>
-                            <span class="key" title="Option">option</span>
-                                <span class="key-combiner">+</span>
-                            <span class="key" title="Hyphen">-</span>
-                        </dd>
+                        <h2>Apply it</h2>
+                        <dl>
+                            <dt>Copy the character</dt>
+                            <dd class="copy-it"><button class="button-copy" id="copy-ndash" data-clipboard-text="&ndash;">&ndash;</button><span class="copied">&#10004;</span></dd>
 
-                        <dt>Windows Keyboard</dt>
-                        <dd>
-                            <span class="key" title="Alt">alt</span>
-                                <span class="key-combiner">+</span>
-                            <span class="key" title="0">0</span>
-                                <span class="key-combiner">+</span>
-                            <span class="key" title="1">1</span>
-                                <span class="key-combiner">+</span>
-                            <span class="key" title="5">5</span>
-                                <span class="key-combiner">+</span>
-                            <span class="key" title="0">0</span>
-                        </dd>
+                            <dt>Mac Keyboard</dt>
+                            <dd>
+                                <span class="key" title="Option">option</span>
+                                    <span class="key-combiner">+</span>
+                                <span class="key" title="Hyphen">-</span>
+                            </dd>
 
-                        <dt>html code</dt>
-                        <dd><code>&amp;ndash;</code></dd>
-                    </dl>
+                            <dt>Windows Keyboard</dt>
+                            <dd>
+                                <span class="key" title="Alt">alt</span>
+                                    <span class="key-combiner">+</span>
+                                <span class="key" title="0">0</span>
+                                    <span class="key-combiner">+</span>
+                                <span class="key" title="1">1</span>
+                                    <span class="key-combiner">+</span>
+                                <span class="key" title="5">5</span>
+                                    <span class="key-combiner">+</span>
+                                <span class="key" title="0">0</span>
+                            </dd>
+
+                            <dt>html code</dt>
+                            <dd><code>&amp;ndash;</code></dd>
+                        </dl>
+                    </div>
+
                 </article>
 
                 <article id="hyphen">
-                    <h1>Hyphen <span class="hyphen">-</span></h1>
-                    <p>Brings two items together that are closely related and turns them into a single idea.</p>
+                    <div class="overview">
+                        <h1>Hyphen <span class="hyphen">-</span></h1>
+                        <p>Brings two items together that are closely related and turns them into a single idea.</p>
+                    </div>
 
-                    <h2>Examples</h2>
-                    <ol>
-                        <li>The deodorant was freshly<span class="hyphen">-</span>applied.</li>
-                        <li>Its odor<span class="hyphen">-</span>reduction capabilities were astounding.</li>
-                        <li>The deodorant no more than two years old at that time. A three<span class="hyphen">-</span>year<span class="hyphen">-</span>old stick of deodorant would have been disgusting.</li>
-                    </ol>
+                    <div class="details">
+                        <h2>Examples</h2>
+                        <ol>
+                            <li>The deodorant was freshly<span class="hyphen">-</span>applied.</li>
+                            <li>Its odor<span class="hyphen">-</span>reduction capabilities were astounding.</li>
+                            <li>The deodorant no more than two years old at that time. A three<span class="hyphen">-</span>year<span class="hyphen">-</span>old stick of deodorant would have been disgusting.</li>
+                        </ol>
 
-                    <h2>Apply it</h2>
-                    <dl>
-                        <dt>Copy the character</dt>
-                        <dd class="copy-it"><button class="button" id="copy-hyphen" data-clipboard-text="-">-</button></dd>
+                        <h2>Apply it</h2>
+                        <dl>
+                            <dt>Copy the character</dt>
+                            <dd class="copy-it"><button class="button-copy" id="copy-hyphen" data-clipboard-text="-">-</button><span class="copied">&#10004;</span></dd>
 
-                        <dt>Mac Keyboard</dt>
-                        <dd><span class="key" title="Hyphen">-</span></dd>
+                            <dt>Mac Keyboard</dt>
+                            <dd><span class="key" title="Hyphen">-</span></dd>
 
-                        <dt>Windows Keyboard</dt>
-                        <dd><span class="key" title="Hyphen">-</span></dd>
+                            <dt>Windows Keyboard</dt>
+                            <dd><span class="key" title="Hyphen">-</span></dd>
 
-                        <dt>html code</dt>
-                        <dd>n/a</dd>
-                    </dl>
+                            <dt>html code</dt>
+                            <dd>n/a</dd>
+                        </dl>
+                    </div>
+
                 </article>
 
             </section>
@@ -177,16 +191,17 @@
 
         </main>
 
-        <footer>
+        <footer class="page-footer">
             <div class="content">
-                Created with the best intent by <br /><a href="https://twitter.com/willdages">Will Dages</a> | <a href="https://twitter.com/kaufmandesign">Aaron Kaufman</a>
+                Created with the best intent by <br /><a href="https://twitter.com/willdages">Will Dages</a> <span class="separator">|</span> <a href="https://twitter.com/kaufmandesign">Aaron Kaufman</a>
             </div>
         </footer>
 
         <!-- build:js(.) scripts/vendor.js -->
         <!-- bower:js -->
-        <script src="/bower_components/zepto/zepto.js"></script>
         <script src="/bower_components/modernizr/modernizr.js"></script>
+        <script src="/bower_components/jquery/dist/jquery.js"></script>
+        <script src="/bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
