--- a/app/index.html
+++ b/app/index.html
@@ -155,7 +155,7 @@
                         <ol>
                             <li>The deodorant was freshly<span class="hyphen">-</span>applied.</li>
                             <li>Its odor<span class="hyphen">-</span>reduction capabilities were astounding.</li>
-                            <li>The deodorant no more than two years old at that time. A three<span class="hyphen">-</span>year<span class="hyphen">-</span>old stick of deodorant would have been disgusting.</li>
+                            <li>The deodorant was no more than two years old at that time. A three<span class="hyphen">-</span>year<span class="hyphen">-</span>old stick of deodorant would have been disgusting.</li>
                         </ol>
 
                         <h2>Apply it</h2>
