Add character code for the hyphen. [deploy: production]

--- a/app/index.html
+++ b/app/index.html
@@ -170,7 +170,7 @@
                             <dd><span class="key" title="Hyphen">-</span></dd>
 
                             <dt>html code</dt>
-                            <dd>n/a</dd>
+                            <dd>&amp;dash;</dd>
                         </dl>
                     </div>
 
