Add a keywords meta tag to the page [deploy: production]

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Which Dash</title>
         <meta name="description" content="When are you supposed to use a dash instead of a hyphen? What's the difference between an em dash and an en dash? ">
+        <meta name="keywords" content="en dash,ndash,mdash,em dash,hyphen">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="shortcut icon" href="/favicon.ico">
