Fix typo in introduction paragraph [deploy: production]

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
 
         <main class="content">
             <section class="introduction">
-                <p><strong>Which Dash</strong> is a super<em class="hyphen">-</em>simple resource to help you better understand the difference between a few commonly used dashes. We hope this guide pushes your "grammar" gas pedal from 0<em class="endash">&ndash;</em>60 and allows you to educate yourself and others<em class="emdash">&mdash;</em>providing us the privilege of earning a place on your booksmark bar. <em class="emdash">&mdash;</em>Will &amp; Aaron</p>
+                <p><strong>Which Dash</strong> is a super<em class="hyphen">-</em>simple resource to help you better understand the difference between a few commonly used dashes. We hope this guide pushes your "grammar" gas pedal from 0<em class="endash">&ndash;</em>60 and allows you to educate yourself and others<em class="emdash">&mdash;</em>providing us the privilege of earning a place on your bookmarks. <em class="emdash">&mdash;</em>Will &amp; Aaron</p>
             </section>
 
             <section class="definitions">
