--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
                         <h2>Apply it</h2>
                         <dl>
                             <dt>Copy the character</dt>
-                            <dd class="copy-it"><button class="button-copy" id="copy-mdash" data-clipboard-text="&mdash;"><span class="dash">&mdash;</span></button><span class="copied">&#10004;</span></dd>
+                            <dd class="copy-it"><button class="button-copy" id="copy-mdash" data-clipboard-text="&mdash;" data-character-name="emdash"><span class="dash">&mdash;</span></button><span class="message"></span><span class="dash selection-copy">&mdash;</span></dd>
 
                             <dt>Mac Keyboard</dt>
                             <dd>
@@ -116,7 +116,7 @@
                         <h2>Apply it</h2>
                         <dl>
                             <dt>Copy the character</dt>
-                            <dd class="copy-it"><button class="button-copy" id="copy-ndash" data-clipboard-text="&ndash;">&ndash;</button><span class="copied">&#10004;</span></dd>
+                            <dd class="copy-it"><button class="button-copy" id="copy-ndash" data-clipboard-text="&ndash;" data-character-name="endash">&ndash;</button><span class="message"></span><span class="selection-copy">&ndash;</span></dd>
 
                             <dt>Mac Keyboard</dt>
                             <dd>
@@ -162,7 +162,7 @@
                         <h2>Apply it</h2>
                         <dl>
                             <dt>Copy the character</dt>
-                            <dd class="copy-it"><button class="button-copy" id="copy-hyphen" data-clipboard-text="-">-</button><span class="copied">&#10004;</span></dd>
+                            <dd class="copy-it"><button class="button-copy" id="copy-hyphen" data-clipboard-text="-" data-character-name="hyphen">-</button><span class="message"></span><span class="selection-copy">-</span></dd>
 
                             <dt>Mac Keyboard</dt>
                             <dd><span class="key" title="Hyphen">-</span></dd>
@@ -202,7 +202,7 @@
         <!-- bower:js -->
         <script src="/bower_components/modernizr/modernizr.js"></script>
         <script src="/bower_components/jquery/dist/jquery.js"></script>
-        <script src="/bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
+        <script src="/bower_components/clipboard/dist/clipboard.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
